== 1.1.3 released 2008-09-22

* Setting a condition to nil removes it if the condition is set to ignore blanks
* Setting search.conditions = "some sql" will reset ALL conditions. Alternatively search.conditions => {:first_name_contains => "Ben"} will overwrite "some sql". The same goes with search.conditions.first_name_contains = "Ben".

== 1.1.2 released 2008-09-22

* Fixed bug with select control types not using :search_obj to determine its select values.
* Added is_nil and is_blank condition types.
* "memoized" various attributes for performance enhancements
* Removed the :order option from calculation options when :order is useless and just slows down query.
* Switched from using :include to :joins, big performance increase

== 1.1.1 released 2008-09-19

* Fixed typo in "next page" button.
* Updated valid options for searching and performing calculations, fixed some bugs when searching and performing calculations with advanced options.
* Fixed bug in ordering where table name was assumed by the hash. Now assumed by the reflection.
* Added default for per_page, so pagination comes implemented by default
* On mass assignments blank strings for *any* conditions are ignored. Sometimes blank strings are meaningful for "equals" and "does not equal", those only takes effect if you explicitly call these conditions: search.conditions.name = "". User.new_search(:conditions => {:name => ""}) will be ignored. Also, Searchgasm should never change how ActiveRecord behaves by default. So User.all(:conditions => {:name => ""}) will NOT be ignored.

== 1.1.0 released 2008-09-18

* Added the options :inner_spread and :outer_spread to the page_links helper. Also added various config options for setting page_links defaults.
* Updated calculation methods to ignore :limit and :offset. AR returns 0 or nil on calculations that provide an offset.